--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AvoGato Workroom Prime</title>
+    <title>AvoGato Workroom Remastered</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header class="header">
         <div class="menu container">
-            <img src="" alt="">
-            <a href="#" class="logo">AGWR</a>
+            <a href="#" class="logo"></a>
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="assets/avogato icon.png" class="menu-icono" alt="10px">
+                <img src="assets/avogato icon.png" class="menu-icono" alt="">
             </label>
             <nav class="navbar">
                 <ul>
@@ -43,7 +42,7 @@
                 <h3>Dirección</h3>
                 <p>Valencia, Carabobo</p>
             </div>
-           <div class="dir"></div> 
+           <div class="dir">
                 <h3>Teléfono</h3>
                 <p>+58 8675-309</p>
             </div>
@@ -59,7 +58,7 @@
 <section class="welcome">
 
     <div class="welcome-1"></div>
-    <div class="welcome-2"></div>
+    <div class="welcome-2">
         <h2>Bienvenidos a AvoGato Workroom</h2>
         <p class="b1">
             Conéctate con el medio. Conoce a más talentos, inicia tus propios proyectos o forma parte 
@@ -138,7 +137,7 @@
                         - Entrega en Formatos JPG - PNG - PDF
                     </th>
                     <td>
-                        Contactanos
+                        Contáctanos
                     </td>
                 </tr>
                 <tr>
@@ -183,9 +182,9 @@
             <img src="assets/franela-alfalfa.png" alt="">
             <h3>Camisa de Alfalfa</h3>
             <p>De nuestro repertorio artístico.</p>
-            <a href="#">Comprar</a>
-    </div> 
-    <a href="#" class="btn-1">Más Información</a>
+            <a href="#">Comprar</a>    
+    <a href="#" class="btn-1" style="display: flex;">Más Información</a>
+</div> 
     
  </section>
 
